# aca-proj11

./: .editorconfig  .gitignore  CMakeLists.local.Windows.txt  CMakeLists.local.macOS.txt  CMakeLists.txt
contrib/: cloud_setup.sh
contrib/matlab/: dilate.m  erode.m  makecircle.m  morph.m
contrib/planner-js/: planner.html
contrib/stats/: 6900k.txt  cuda.txt  gce.txt
docker/: Dockerfile
report/: .gitignore  01-morphology.asc  02-serial.asc  03-parallel_openmp.asc  04-custom_planning.asc  05-kernel_code_design.asc  06-custom_planning.asc  06-simd_with_intrinsics.asc  07-kernel_code_design.asc  07-profiling_and_optimization.asc  08-results.asc  08-simd_with_intrinsics.asc  09-cuda_approach.asc  09-profiling_and_optimization.asc  11-cuda_approach.asc  Gemfile  Rakefile  main.asc  style_printfix.css
report/vega/: bench_6900.json  bench_6900_8k.json  bench_6900_simd.json  bench_6900_simd_8k.json  bench_cloud.json  bench_cloud_simd.json  bench_comp_plan.json  bench_comp_plan_8k.json  bench_compilers.json  bench_compilers_simd.json  bench_cuda.json  bench_opts.json  bench_opts_8k.json  bench_opts_8k_simd.json  bench_opts_simd.json
slides/: package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
slides/src/: index.ejs  index.js  morphbench.cast  speaker-console.css
slides/src/content/: 1-morphology.ejs  1-morphology.scss  2-impl.ejs  2-impl.scss  3-planning.ejs  3-planning.scss  4-kernspec.ejs  4-kernspec.scss  5-simd.ejs  5-simd.scss  6-optimization.ejs  6-optimization.scss  7-results.ejs  7-results.scss  8-cuda.ejs  8-cuda.scss
slides/src/modules/showMore/: showMore.js  showMore.scss
slides/src/styles/: _vars.scss  fonts.scss  impress-fallback.scss  impress-global.scss  style.scss
src/: capabilities.cpp  capabilities.h  morph.cpp  morphbench.cpp  morphcuda.cpp  simd_props.h
src/core/: modes.cpp  modes.h  opexec.cpp  opexec.h
src/core/modes/: dilate.cpp  dilate.h  dump_plan.cpp  dump_plan.h  erode.cpp  erode.h  operators.cpp  operators.h
src/cuda/: gpgpu_cuda.cu  gpgpu_cuda.cuh
src/morphology/: StrEl.cpp  StrEl.h  dilate_parallel.cpp  dilate_parallel.h  dilate_parallel_kernel.inc  kern_sched_cpu.inl  kern_sched_cpu_sebound_x.inl  kern_sched_cpu_sebound_y.inl  kernels.h  operator_types.h  operators.cpp  operators.h  process_parallel.cpp  process_parallel.h  process_parallel.tcc  reference.h  reference_dilate.cpp  simddefs.avx2.inl  simddefs.avx512f.inl  simddefs.sse2.inl  simddefs_clear.inl
src/parallel/: Chunk.h  CoreAllocation.h  Plan.h  Rect.h  RegionSpec.h  even_region.cpp  even_region.h  ostream_dump.h  ostream_dump_json.cpp  planner_simd.cpp  planners.h  planners_simd.cpp
